--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 filelock==3.12.0
-Flask==2.3.2
+Flask
 flatbuffers==23.5.26
 fsspec==2023.5.0
 gast==0.4.0
