--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,3 @@
-absl-py
-astunparse
-blinker
-cachetools
-certifi
-charset-normalizer
-click
-colorama
-filelock
-Flask
-flatbuffers
-fsspec
-gast
-google-auth
-google-auth-oauthlib
-google-pasta
-grpcio
-h5py
-huggingface-hub
-idna
-itsdangerous
-jax
-Jinja2
-keras
-libclang
-Markdown
-MarkupSafe
-ml-dtypes
-numpy
-oauthlib
-opt-einsum
-packaging
-protobuf
-pyasn1
-pyasn1-modules
-PyYAML
-regex
-requests
-requests-oauthlib
-rsa
-safetensors
-scipy
-six
-tensorboard
-tensorboard-data-server
 tensorflow
-tensorflow-estimator
-tensorflow-intel
-tensorflow-io-gcs-filesystem
-termcolor
-tokenizers
-tqdm
+flask
 transformers
-typing_extensions
-urllib3
-Werkzeug
-wrapt
